--- a/result.html
+++ b/result.html
@@ -1,19 +1,1 @@
-
-    <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-    <html>
-        <head>
-            <title>Error: 500 Internal Server Error</title>
-            <style type="text/css">
-              html {background-color: #eee; font-family: sans-serif;}
-              body {background-color: #fff; border: 1px solid #ddd;
-                    padding: 15px; margin: 15px;}
-              pre {background-color: #eee; border: 1px solid #ddd; padding: 5px;}
-            </style>
-        </head>
-        <body>
-            <h1>Error: 500 Internal Server Error</h1>
-            <p>Sorry, the requested URL <tt>&#039;http://140.135.13.120/pred3388?q=eyJwcm9iaWQiOiAidGVzdDAwMSIsICJpbmZvIjogIklORk8iLCAic3ViaWQiOiAiU3ViaWQiLCAiY29kZSI6ICJcbiNpbmNsdWRlIDxzdGRpby5oPlxuXG5pbnQgbWFpbigpXG57XG5cdHByaW50ZihcIlRoZSBwcm9ncmFtIHVzZXMgMzQlJSBDUFUgcmVzb3VyY2UuXCIpXHUzMTI0XG5cdHJldHVybiAwO1xufVxuXG4ifQ%3D%3D&#039;</tt>
-               caused an error:</p>
-            <pre>Internal Server Error</pre>
-        </body>
-    </html>
+抱歉，這個問題我目前還沒有辦法處理！
