--- a/result.html
+++ b/result.html
@@ -1,1 +1,14 @@
-抱歉，這個問題我目前還沒有辦法處理！
+  
+ #include <stdio.h> 
+  
+ int main() 
+ { 
+ printf ( " Hello world " ) ; 
+  
+  
+ return 0; 
+ } 
+  
+  
+  
+  
