--- a/result.html
+++ b/result.html
@@ -1,14 +1,1 @@
-  
- #include <stdio.h> 
-  
- int main() 
- { 
- printf ( " Hello world " ) ; 
-  
-  
- return 0; 
- } 
-  
-  
-  
-  
+抱歉，這個問題我目前還沒有辦法處理！
